# audiodecoder.mad

./: CMakeLists.txt  FindMAD.cmake
audiodecoder.mad/: addon.xml  addon.xml.in
src/: MP3Codec.cpp
